[package]
name = "chem"
version = "0.0.1"
description = "A cheminformatics library by Rust." 
edition = "2018"
license = "MIT"
homepage = "https://github.com/chiral-data/rust-chem"
repository = "https://github.com/chiral-data/rust-chem"
documentation = "https://docs.rs/chem"
readme = "README.md"
keywords = ["cheminformatics", "algorithms", "molecule", "SMILES"]
categories = ["science"]

[dependencies]

[dev-dependencies]
purr = "0.9"